Fix tabs overflow

--- a/src/app/tab.scss
+++ b/src/app/tab.scss
@@ -64,7 +64,7 @@ body:not(.is-phone) {
     }
 
     .workspace-tab-header-container-inner {
-      justify-content: center;
+      justify-content: safe center;
       gap: 4px;
       padding: 0;
     }
